networkpolicy/allow-dns/allow-specifiic-dns.yaml
# Allow DNS traffic to 8.8.8.8
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-dns
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: '8.8.8.8/32'
    ports:
    - protocol: UDP
      port: 53
